--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -425,6 +425,7 @@ input:-moz-placeholder { font-weight: 300; }
 		//} ** END INCLUDES
 		
 		>table{
+			color: white !important;
 			position: relative;
 			float: left;
 			width: 100%;
@@ -436,6 +437,102 @@ input:-moz-placeholder { font-weight: 300; }
 						padding-bottom: 10px;
 					}
 				}
+			}
+		}
+
+		>.message{
+
+			//{ ** INCLUDES
+				// @include relativeMiddle();
+
+			//} ** END INCLUDES
+
+			//{ ** ATTRIBUTES
+					position: relative;
+					float: left;
+					width: 100%;
+					clear: both;
+				   // text-align: center;
+			//} ** END ATTRIBUTES
+			
+			
+		}
+
+		>.completeButton{
+			display: block;
+
+			//{ ** INCLUDES
+				@include relativeMiddle();
+				@include notSelectable();
+				@include noDecoration();
+				@include quickTransition(all);
+			//} ** END INCLUDES
+
+			//{ ** ATTRIBUTES
+				position: relative;
+				float: left;
+			//} ** END ATTRIBUTES
+			
+
+
+			//{ ** ATTRIBUTES
+				margin-top: 10px;
+				clear: both;
+				padding: 10px;
+				border: solid 2px white;
+				border-radius: 5px;
+				color: white;
+				cursor: pointer;
+			//} ** END ATTRIBUTES
+			
+			&:not(.isMobile):hover{
+				background-color: white;
+				color: black;
+			}
+			
+		}
+		>#completeButtonForm{
+			margin-top: 10px;
+			border-top: 1px solid white;
+			display: none;
+			position: relative;
+			float: left;
+			clear: both;
+			>*{
+				position: relative;
+				float: left;
+				clear: both;
+			}
+			input[type=email]{
+
+				//{ ** INCLUDES
+					// @include noDecoration();
+				//} ** END INCLUDES
+				
+				margin-top: 20px;
+				height: 30px;
+				line-height: 30px;
+				padding: 10px;
+				font-size: calc(12px + 0.5vw);
+			}
+			>#completeSubmit{
+				display: none;
+			}
+			>label{
+				>div{
+
+					//{ ** INCLUDES
+						@inlude noDecoration();
+						@include notSelectable();
+					//} ** END INCLUDES
+					
+					margin-top: 10px;
+					cursor: pointer;
+				}
+			}
+			span{
+				color: $color-link;
+				margin-top: 20px;
 			}
 		}
 	}
