--- a/assets/css/spring2017/hackbot.css
+++ b/assets/css/spring2017/hackbot.css
@@ -6,7 +6,8 @@ html {
   min-height: 100%; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  background-color: black; }
   body.isMobile {
     background-color: black; }
 
