--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -9,6 +9,7 @@ body{
 	margin: 0;
 	// min-height: 100vh;
 	// min-width: 660px;
+	background-color: black;
 	&.isMobile{
 		background-color: black;
 	}
